Fix history events overlap
In the editor. Made it scrollable if it overflows.

Close: #13886

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -653,6 +653,10 @@ form + .login-label {
   z-index: 10;
 }
 
+#history {
+  overflow-x: auto;
+}
+
 @media only screen and (max-width: 600px) {
   .btn-float {
     box-shadow: none;
